tests/NormalTests/paczka1/small_fuzzy/27260205.err
Error in line 2: w6wvPcT0gGy S901 18,8
Error in line 4: oh2f A819 59,2
Error in line 11: A657 S901 25,69
Error in line 10: H71RQRelM A657 0,4
